# local_sender

./: .gitignore  Cargo.toml  index.html  log4rs.yml  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: master.yml
server/: Cargo.toml
server/src/: lib.rs  main.rs  service.rs
server/src/consts/: mod.rs
server/src/handler/: list_file.rs  message.rs  mod.rs  pull.rs  pull_stream.rs  push.rs  temp.rs
server/src/model/: file.rs  http_resp.rs  mod.rs
server/src/utils/: mod.rs
server/test/api/: ls.http  msg.http  pull.http
server/test/test_file/: server
shared/: Cargo.toml
shared/src/: lib.rs
src/: App.vue  main.ts
src/api/: base.ts  ls.ts  pull.ts
src/components/: AppBar.vue  DashBoardMain.vue  DashBoardSideBar.vue  index.ts
src/plugins/: vuetify.ts
src/router/: index.ts
src/stores/: counter.ts
src/utils/data/: index.ts
src/utils/icon/: index.ts
src/utils/request/: axios.ts  index.ts
src/views/: DashBoardView.vue
