[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
shared = { path = "../shared" }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tower_governor = "0.0.4"
tower = "0.4"
axum = "0.6"
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
