[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
log4rs = "1.2"
rust-ini = "0.19"
serde = { version = "1.0", features = ["derive"] }
